--- a/server/package.json
+++ b/server/package.json
@@ -1,15 +1,31 @@
 {
   "name": "rasp-server",
-  "private": true,
-  "main": "index.js",
+  "version": "1.0.0",
+  "description": "",
+  "main": "src/index.ts",
   "scripts": {
-    "start": "node index.js"
+    "tsc": "tsc",
+    "serve": "ts-node-dev --respawn --transpileOnly ./src/index.ts",
+    "build": "tsc && node ./dist/index.js",
+    "start": "node index.js",
+    "lint": "eslint --ext .js,.jsx,.ts,.tsx ./"
   },
+  "author": "",
+  "license": "ISC",
   "dependencies": {
-    "@logux/server": "^0.6.1",
-    "dotenv": "^8.2.0",
-    "node-pg-migrate": "^4.5.0",
-    "pg": "^8.0.0",
-    "pg-promise": "^10.5.0"
+    "@types/express": "^4.17.4",
+    "@types/express-session": "^1.17.0",
+    "@types/node": "^13.11.0",
+    "@types/request": "^2.48.4",
+    "express": "^4.17.1",
+    "save-dev": "0.0.1-security",
+    "ts-node-dev": "^1.0.0-pre.44",
+    "typescript": "^3.8.3"
+  },
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^2.24.0",
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb-typescript": "^7.2.0",
+    "eslint-plugin-import": "^2.20.1"
   }
 }
