--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "ky": "^0.19.0",
     "register-service-worker": "^1.6.2",
     "vant": "^2.5.9",
     "vue": "^2.6.11",
@@ -30,7 +31,7 @@
     "eslint": "^6.7.2",
     "eslint-plugin-import": "^2.20.1",
     "eslint-plugin-vue": "^6.1.2",
-    "typescript": "~3.7.5",
+    "typescript": "^3.8.3",
     "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
