--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "main": "src/index.ts",
   "scripts": {
     "tsc": "tsc",
-    "serve": "ts-node-dev --respawn --transpileOnly ./src/index.ts",
+    "dev": "ts-node-dev --respawn --transpileOnly ./src/index.ts",
     "build": "tsc && node ./dist/index.js",
     "start": "node index.js",
     "lint": "eslint --ext .js,.jsx,.ts,.tsx ./"
@@ -17,6 +17,7 @@
     "@types/express-session": "^1.17.0",
     "@types/node": "^13.11.0",
     "@types/request": "^2.48.4",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "save-dev": "0.0.1-security",
     "ts-node-dev": "^1.0.0-pre.44",
