--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
     "@types/request": "^2.48.4",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "mongodb": "^3.5.5",
     "save-dev": "0.0.1-security",
     "ts-node-dev": "^1.0.0-pre.44",
     "typescript": "^3.8.3"
