app name changed to rasp_admin_app

--- a/admin-app/android/app/build.gradle
+++ b/admin-app/android/app/build.gradle
@@ -39,7 +39,7 @@ android {
 
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId "com.example.chat_app"
+        applicationId "com.average_minds.rasp_admin_app"
         minSdkVersion 16
         targetSdkVersion 28
         versionCode flutterVersionCode.toInteger()
