--- a/admin-app/pubspec.yaml
+++ b/admin-app/pubspec.yaml
@@ -1,5 +1,5 @@
-name: chat_app
-description: A new Flutter project.
+name: rasp_admin_app
+description: An app for public schedules
 
 # The following line prevents the package from being accidentally published to
 # pub.dev using `pub publish`. This is preferred for private packages.
