--- a/admin-app/pubspec.yaml
+++ b/admin-app/pubspec.yaml
@@ -23,6 +23,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  provider: ^4.3.1
   image_picker: ^0.6.7+4
   cloud_firestore: ^0.13.7
   firebase_auth: ^0.16.1
